Added ascii bunny

--- a/bunny/index.html
+++ b/bunny/index.html
@@ -1,17 +1,51 @@
 <!doctype html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>Easter bunny</title>
-	</head>
-	<body>
-	<canvas id=a></canvas>	
-	<script>
-	d=document
-	b=d.body
-	c=a.getContext("2d")
-	// gl=a.getContext("webgl")
-	</script>
-	<script src="bunny.js"></script>
-	</body>
+<head>
+<meta charset="utf-8">
+<title>Easter bunny</title>
+</head>
+<body>
+<canvas id=a></canvas>	
+<script>
+d=document
+b=d.body
+c=a.getContext("2d")
+// gl=a.getContext("webgl")
+</script>
+<script type="text/html" id="bunnyData">
+
+
+         .+:  :=                
+         #@# ^@@"               
+        +@@%^N%N"               
+       .%@@NN*+%-               
+       ^@@@@x ##                
+       #@@@Q :%^                
+      -N@@N" +%.                
+      ^@@@* .Q*                 
+    :#@@@N" +%-                 
+   *@@@@@@+=N+                  
+  x@@@@@@@@@x                   
+ +@@@%*@@@@@x                   
+-%@@@x %@@@@Q .""-              
++@@@@@N@@@@@@@@@@@@@%+`         
+*@@@@@@@@@@@@@@@@@@@@@@+        
+*@@@@@@@@@@@@@@@@@@@@@@@#       
+.%@@@@@@@@@@@@@@@@@@@@@@@#      
+ `+QNN%N@@@@@@@@@@@@@@@@@@*     
+      "N@@@@@@@@@@@@@@@@@@N"    
+      "@@@@@@@@@@@@@@@@@@@@#    
+      :N@@@@@@@@@@@@@@@@@@@N:   
+       Q@@@@@@@@@@@@@@@@@@@@+   
+       ^@@@@@@@@@@@@@@@@@@@@#   
+       "@@@@QN@@@@@@@@@@@@@@%   
+       +@@@QQ@@@@@@@@@@@@@@@@Q* 
+       x@@N+N@@@@@@@@@@@@@@@@@N"
+       Q@@#+@@@@@@@@@@@@@@@@@@@"
+      :N@N:^@@@@@@@@@@@@@@@@@@%.
+      +@@* -%@@@@@@@@@@@@@@@@@+ 
+      Q@%.  :%@@@@@@@@@@@@@@@x  
+</script>
+<script src="bunny.js"></script>
+</body>
 </html>
