--- a/interference/index.html
+++ b/interference/index.html
@@ -9,8 +9,7 @@
 	<script>
 	d=document
 	b=d.body
-	c=a.getContext("2d",{ antialias: true,
-                   depth: false })
+	c=a.getContext("2d",{ alpha: false })
 	// gl=a.getContext("webgl")
 	</script>
 	<script src="interference.js"></script>
