--- a/wolf-sheep-grass/index.html
+++ b/wolf-sheep-grass/index.html
@@ -1,4 +1,5 @@
+<meta charset=utf-8>
 <body style=background-color:#333;overflow:hidden;margin:0>
-<canvas id=a style=display:block;width:100%;height:100%>
+<canvas id=a style=display:block;width:100vw;height:100vh>
 <script>d=document;b=d.body;c=a.getContext('2d')</script>
 <script src=index.js></script>
