changed title, removed js1k-like shim

--- a/soundcloud-helloworld/index.html
+++ b/soundcloud-helloworld/index.html
@@ -2,17 +2,11 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Interference</title>
+		<title>Soundcloud: Hello World!</title>
 	</head>
 	<body>
 	<canvas id=C></canvas>
 	<audio id=A></audio>
-	<script>
-	d=document
-	b=d.body
-	c=C.getContext("2d",{ alpha: false })
-	// gl=a.getContext("webgl")
-	</script>
 	<script src="hellosc.js"></script>
 	</body>
 </html>
