the basic things are working :)

--- a/soundcloud-helloworld/index.html
+++ b/soundcloud-helloworld/index.html
@@ -5,8 +5,8 @@
 		<title>Soundcloud: Hello World!</title>
 	</head>
 	<body>
-	<canvas id=C></canvas>
-	<audio id=A></audio>
-	<script src="hellosc.js"></script>
+		<audio id=A controls></audio>
+		<canvas id=C></canvas>
+		<script src="hellosc.js"></script>
 	</body>
 </html>
