--- a/soundcloud-helloworld/index.html
+++ b/soundcloud-helloworld/index.html
@@ -3,9 +3,10 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Soundcloud: Hello World!</title>
+		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
-		<audio id=A controls></audio>
+		<audio id=A></audio>
 		<canvas id=C></canvas>
 		<script src="hellosc.js"></script>
 	</body>
