add audio controls

--- a/soundcloud-helloworld/index.html
+++ b/soundcloud-helloworld/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
-		<audio id=A></audio>
+		<audio id=A controls></audio>
 		<canvas id=C></canvas>
 		<script src="hellosc.js"></script>
 	</body>
